"use strict";
const { Model } = require("sequelize");
const { EVENT_STATUS } = require("../constants/eventStatus");

module.exports = (sequelize, DataTypes) => {
  class Event extends Model {
    static associate(models) {
      Event.hasMany(models.EventUser, {
        foreignKey: "event_id",
        onDelete: "CASCADE",
      });
      Event.belongsTo(models.User, {
        as: "creator",
        foreignKey: "creator_id",
        onDelete: "CASCADE",
      });
    }
  }

  Event.init(
    {
      id: {
        type: DataTypes.INTEGER,
        autoIncrement: true,
        primaryKey: true,
      },
      public_id: {
        type: DataTypes.STRING,
        allowNull: false,
        unique: true,
      },
      creator_id: {
        type: DataTypes.INTEGER,
        allowNull: false,
        references: {
          model: "users",
          key: "id",
        },
      },
      title: {
        type: DataTypes.TEXT,
        allowNull: false,
      },
      description: {
        type: DataTypes.TEXT,
        allowNull: false,
      },
      location: {
        type: DataTypes.TEXT,
        allowNull: false,
      },
      capacity: {
        type: DataTypes.INTEGER,
        allowNull: false,
      },
      coins: {
        type: DataTypes.INTEGER,
        allowNull: false,
      },
      end_sign: {
        type: DataTypes.DATE,
        allowNull: false,
      },
      start_time: {
        type: DataTypes.DATE,
        allowNull: false,
      },
      end_time: {
        type: DataTypes.DATE,
        allowNull: false,
      },
      status: {
        type: DataTypes.ENUM(...Object.values(EVENT_STATUS)),
        defaultValue: EVENT_STATUS.UPCOMING,
      },
    },
    {
      sequelize,
      modelName: "Event",
      tableName: "events",
    },
  );

  return Event;
};
