Project TechSolve_2025 {
  database_type: 'PostgreSQL'
  Note: 'TechSolve 2025 Database ERD'
}

Table users {
  id uuid [pk]
  status varchar(255) [not null, default: 'active']
  email varchar(255) [unique, not null]
  username varchar(255) [unique, not null]
  password varchar(255)
  role varchar(255) [not null, default: 'user', note: "enum('admin','partner','user')"]
  avatar_url varchar(255) [not null]
  metadata jsonb
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table user_profiles {
  id uuid [pk]
  user_id uuid [ref: - users.id, unique, not null]
  full_name varchar(255) [not null]
  phone_number varchar(255) [unique]
  streak int [not null, default: 0]
  last_completed_task datetime
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table user_social_accounts {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  provider varchar(255) [not null]
  provider_user_id varchar(255) [unique, not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table coins {
  id uuid [pk]
  user_id uuid [ref: - users.id, unique, not null]
  amount int [not null, default: 0]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table ranks {
  id uuid [pk]
  user_id uuid [ref: - users.id, unique]
  amount int [not null, default: 0]
  order int [not null, default: 0]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table delivery_accounts {
  id uuid [pk]
  name varchar(255) [not null]
  user_id uuid [ref: > users.id, not null]
  carrier varchar(255) [not null, default: 'ghn', note: "enum('ghn','ghtk','grab')"]
  api_config jsonb
  is_default boolean [not null, default: false]
}

Table delivery_orders {
  id uuid [pk]
  transaction_id uuid [ref: - transactions.id, unique, not null]
  seller_id uuid [ref: > users.id, not null]
  buyer_id uuid [ref: > users.id]
  delivery_account_id uuid [ref: > delivery_accounts.id]
  order_code text
  status varchar(255) [not null, default: 'ready_to_pick']
  to_name varchar(255) [not null]
  to_phone varchar(255) [not null]
  to_address text [not null]
  is_printed boolean [default: false]
  created_date datetime
  cod_amount int [not null]
  weight int [not null]
  payment_type_id int [not null]
  total_amount int [not null]
  item_snapshot jsonb
}

Table receiver_informations {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  to_name varchar(255) [not null]
  to_phone varchar(255) [not null]
  to_address text [not null]
  to_ward_name varchar(255) [not null]
  to_district_name varchar(255) [not null]
  to_province_name varchar(255) [not null]
  account_type varchar(255) [not null, default: 'home', note: "enum('home','office')"]
  is_default boolean [not null, default: false]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table items {
  id uuid [pk]
  product_id uuid [ref: > products.id]
  creator_id uuid [ref: > users.id, not null]
  name varchar(255) [not null]
  description text
  price int [not null]
  stock int [not null]
  status varchar(255) [default: 'pending', note: "enum('available','sold_out','pending')"]
  weight int [not null]
  length int [not null]
  width int [not null]
  height int [not null]
  purchase_limit_per_day int
  images "text[]"
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table products {
  id uuid [pk]
  seller_id uuid [ref: > users.id, not null]
  name varchar(255) [not null]
  description text
  price int [not null]
  stock int [not null, default: 1]
  category varchar(255) [not null]
  product_status varchar(255) [not null, default: 'new']
  post_status varchar(255) [not null, default: 'pending']
  images "text[]"
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table transactions {
  id uuid [pk]
  receiver_information_id uuid [ref: > receiver_informations.id, not null]
  buyer_id uuid [ref: > users.id, not null]
  seller_id uuid [ref: > users.id, not null]
  item_id uuid [ref: > items.id, not null]
  name varchar(255)
  item_snapshot jsonb [not null]
  total_price int [not null]
  quantity int [not null, default: 1]
  status varchar(255) [not null, default: 'pending']
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table events {
  id uuid [pk]
  public_id varchar(255) [unique, not null]
  creator_id uuid [ref: > users.id, not null]
  title text [not null]
  description text [not null]
  location text [not null]
  capacity int [not null]
  coins int [not null]
  end_sign datetime [not null]
  start_time datetime [not null]
  end_time datetime [not null]
  status varchar(255) [default: 'upcoming']
  images "text[]"
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table event_users {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  event_id uuid [ref: > events.id, not null]
  joined_at datetime
  completed_at datetime
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table types {
  id uuid [pk]
  type varchar(255) [unique, not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table tasks {
  id uuid [pk]
  creator_id uuid [ref: > users.id, not null]
  title varchar(255) [not null]
  description varchar(255) [not null]
  content text
  coins int [not null]
  difficulty varchar(255) [not null]
  total int [default: 1]
  status varchar(255) [not null, default: 'public']
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table task_types {
  id uuid [pk]
  task_id uuid [ref: > tasks.id, not null]
  type_id uuid [ref: > types.id, not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table task_users {
  id uuid [pk]
  user_id uuid [ref: > users.id, not null]
  task_id uuid [ref: > tasks.id, not null]
  progress_count int [default: 0]
  assigned_at datetime [not null]
  completed_at datetime
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table task_submits {
  id uuid [pk]
  task_user_id uuid [ref: > task_users.id, not null]
  description text
  status varchar(255) [default: 'pending']
  submitted_at datetime [not null]
  images jsonb
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table system_configs {
  id uuid [pk]
  key varchar(100) [unique, not null]
  value text [not null]
  description text
  is_active boolean [not null, default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table posts {
  id uuid [pk]
  event_id uuid [ref: > events.id]
  author_id uuid [ref: > users.id, not null]
  content text [not null]
  images jsonb
  tags jsonb
  upvotes int [not null, default: 0]
  downvotes int [not null, default: 0]
  comment_count int [not null, default: 0]
  score int [not null, default: 0]
  status varchar(255) [not null, default: 'pending']
  rejected_by varchar(20)
  category varchar(255)
  flagged_reason text
  is_admin_post boolean [not null, default: false]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table post_votes {
  id uuid [pk]
  post_id uuid [ref: > posts.id, not null]
  user_id uuid [ref: > users.id, not null]
  type varchar(10) [not null]
}

Table comments {
  id uuid [pk]
  post_id uuid [ref: > posts.id, not null]
  author_id uuid [ref: > users.id, not null]
  parent_id uuid [ref: > comments.id]
  content text [not null]
  upvotes int [not null, default: 0]
  downvotes int [not null, default: 0]
  image_url varchar(255)
  status varchar(255) [not null, default: 'approved']
  rejected_by varchar(20)
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}

Table comment_votes {
  id uuid [pk]
  comment_id uuid [ref: > comments.id, not null]
  user_id uuid [ref: > users.id, not null]
  type varchar(10) [not null]
}

Table notifications {
  id uuid [pk]
  recipient_id uuid [ref: > users.id, not null]
  sender_id uuid [ref: > users.id]
  type varchar(50) [not null]
  content text [not null]
  link varchar(255)
  is_read boolean [not null, default: false]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
}
